--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/vickoman/santex-backend-test#readme",
   "dependencies": {
-    "apollo-server": "^3.9.0"
+    "apollo-server": "^3.9.0",
+    "dotenv": "^16.0.1",
+    "graphql": "^16.5.0",
+    "mongoose": "^6.4.0"
   }
 }
