--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Santex Graphql API Test",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node .",
+    "dev": "nodemon ."
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,8 @@
     "dotenv": "^16.0.1",
     "graphql": "^16.5.0",
     "mongoose": "^6.4.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
