--- a/api/package.json
+++ b/api/package.json
@@ -19,8 +19,10 @@
   "homepage": "https://github.com/vickoman/santex-backend-test#readme",
   "dependencies": {
     "apollo-server": "^3.9.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
     "graphql": "^16.5.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0"
   },
   "devDependencies": {
