--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node .",
-    "dev": "nodemon ."
+    "dev": "nodemon .",
+    "test": "./node_modules/jest/bin/jest.js  ./tests/unit/**/*.test.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "mongoose": "^6.4.0"
   },
   "devDependencies": {
+    "jest": "^28.1.1",
     "nodemon": "^2.0.16"
   }
 }
