Add FOOTBAL_TOKEN to example

--- a/api/env.example
+++ b/api/env.example
@@ -1,3 +1,4 @@
 PORT=3000
 MONGO_URI=mongodb://mongouser:weakpassword@mongodb:27017/santex-mongo?authSource=admin
 SECRET=santexvictortest
+FOOTBALL_TOKEN=FILLWITHTOKEN
