--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/vickoman/santex-backend-test#readme",
   "dependencies": {
     "apollo-server": "^3.9.0",
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
     "graphql": "^16.5.0",
