--- a/api/env.example
+++ b/api/env.example
@@ -2,3 +2,8 @@ PORT=3000
 MONGO_URI=mongodb://mongouser:weakpassword@mongodb:27017/santex-mongo?authSource=admin
 SECRET=santexvictortest
 FOOTBALL_TOKEN=FILLWITHTOKEN
+FOOTBALL_API_URL=http://api.football-data.org/v4
+ADMIN_NAME="Super"
+ADMIN_LASTNAME="Admin"
+ADMIN_EMAIL="admin@santex.com"
+ADMIN_PASSWORD="S@ntexPassword"
