--- a/api/env.example
+++ b/api/env.example
@@ -1,5 +1,6 @@
 PORT=3000
 MONGO_URI=mongodb://mongouser:weakpassword@mongodb:27017/santex-mongo?authSource=admin
+REDIS_URI=redis://redis:6379
 SECRET=santexvictortest
 FOOTBALL_TOKEN=FILLWITHTOKEN
 FOOTBALL_API_URL=http://api.football-data.org/v4
