--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
     "apollo-server": "^3.9.0",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "bull": "^4.8.4",
     "dotenv": "^16.0.1",
     "graphql": "^16.5.0",
     "jsonwebtoken": "^8.5.1",
