Add volume to mongo

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - ${MONGO_PORT}:27017
     volumes:
-      - ~/apps/mongo:/data/db
+      - 'mongo_data:/data/db'
     environment:
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_ROOT_PASSWORD}
@@ -30,5 +30,7 @@ services:
       - 'redis_data:/bitnami/redis/data'
 volumes:
   redis_data:
+    driver: local
+  mongo_data:
     driver: local
 
